--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<div class="app-root" id="app-root"></div>
+	<%= require('html-loader!./main.html').default %>
 </body>
 </html>
